# user-manager

./: CMakeLists.txt  Messages.sh  README.md  user-manager.kdev4
cmake/modules/: FindPWQuality.cmake
src/: CMakeLists.txt  Messages.sh  account.ui  accountinfo.cpp  accountinfo.h  avatargallery.cpp  avatargallery.h  avatargallery.ui  createavatarjob.cpp  createavatarjob.h  kcm.ui  password.ui  passworddialog.cpp  passworddialog.h  passwordedit.cpp  passwordedit.h  user_manager.desktop  user_manager_debug.cpp  user_manager_debug.h  usermanager.cpp  usermanager.h
src/lib/: accountmodel.cpp  accountmodel.h  modeltest.cpp  modeltest.h  org.freedesktop.Accounts.User.xml  org.freedesktop.Accounts.xml  org.freedesktop.ConsoleKit.Seat.xml  org.freedesktop.ConsoleKit.Session.xml  org.freedesktop.ConsoleKit.xml  org.freedesktop.login1.Manager.xml  usersessions.cpp  usersessions.h
